@@ -12,6 +12,8 @@ v1.x.x.x - unreleased
  CHANGED: Hotkeys added to support more remote control keys
  CHANGED: Support for Theora in Matroska internal splitter
  CHANGED: LibVorbis updated to v1.2.0
+ CHANGED: Improved streaming performances
+ CHANGED: Prevent display or computer to sleep during playback
  FIXED  : Support for Theora stream in Ogg internal splitter
  FIXED  : Save thumbnails crash in x64
  FIXED  : Bugs on presentation graphics (missing subtitles, better synchronization)
@@ -19,6 +21,9 @@ v1.x.x.x - unreleased
  FIXED  : Switch to "Minimal view" reset main menu language to English
  FIXED  : Bug in Mpeg splitter for VC1
  FIXED  : Maximum texture resolution to "Desktop" not working with Haali renderer (Bug #2456735)
+ FIXED  : Better synchronization with EVR custom to improve playback smoothness
+ FIXED  : 24 bits LPCM not properly play 
+ FIXED  : Possible deadlock with Reclock
 
 
 v1.2.908.0 - 30.November 2008
